--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -119,7 +119,7 @@ body {
     height: 350px;
 } 
 
-#background-piscina {
+#background-one {
    background-image: url("../images/background/piscina.jpg"); 
 
    @media only screen and (min-width : 320px) and (max-width : 480px) {
@@ -127,10 +127,10 @@ body {
     }
 }
 
-#background-piscina2 {
+#background-two {
    background-image: url("../images/background/piscina2.jpg"); 
 }
 
-#background-todas-cabanas {
-   background-image: url("../images/background/todas-cabanas.jpg"); 
+#background-three {
+   background-image: url("../images/background/lagoa.jpg"); 
 }
