Alterado cor extras vermelho por roxo

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -62,7 +62,7 @@ body {
 }
 
 .extras {
-    background-color: #9d0006;
+    background-color: #8f3f71;
     text-align: center;
     padding-top: 3%;
     padding-bottom: 3%;
