--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -47,6 +47,15 @@ body {
     color: #b8bb26;
 }
 
+#info {
+    background-color: #fdf6e3;
+    padding-top: 3%;
+    padding-bottom: 1%;
+    text-align: center;
+    font-size: 1.5em;
+    color: #282828;
+}
+
 #sobrado-da-lagoa {
     background-color: #427b58;
 }
