--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -71,32 +71,51 @@ body {
     font-size: 1.5em;
 }
 
-.casa h4 {
+.casa-nome {
     font-size: 1.7em;
 }
 
-.casa img {
-    width: 100%;
+.casa-tipo {
+    margin-bottom: 0px;
+    font-weight: bold;
 }
 
-.extras {
+.casa-texto {
+    font-size: 0.8em;
+}
+
+.casa-box {
+    margin-top: 3%;
+}
+
+.casa-img {
+    border: 2px solid #fbf1c7;
+    border-radius: 3%;
+    width: 100%;
+
+    -webkit-box-shadow: 0px 0px 30px 1px rgba(40,40,40,0.6);
+    -moz-box-shadow: 0px 0px 30px 1px rgba(40,40,40,0.6);
+    box-shadow: 0px 0px 30px 1px rgba(40,40,40,0.6);
+}
+
+#comodidade {
     background-color: #8f3f71;
     text-align: center;
     padding-top: 3%;
     padding-bottom: 3%;
 }
 
-.extras h4 {
+.comodidade-titulo {
     font-size: 2.7em;
 }
 
-.extras h5 {
+.comodidade-nome {
     margin-top: 2%;
     margin-bottom: 0px;
     font-size: 1.3em;
 }
 
-.extras p {
+.comodidade-texto {
     font-size: 1.8em;
 }
 
