--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -94,24 +94,24 @@ body {
     box-shadow: 0px 0px 30px 1px rgba(40,40,40,0.6);
 }
 
-#comodidade {
+#extra {
     background-color: #8f3f71;
     text-align: center;
     padding-top: 3%;
     padding-bottom: 3%;
 }
 
-.comodidade-titulo {
+.extra-titulo {
     font-size: 2.7em;
 }
 
-.comodidade-nome {
+.extra-nome {
     margin-top: 2%;
     margin-bottom: 0px;
     font-size: 1.3em;
 }
 
-.comodidade-texto {
+.extra-texto {
     font-size: 1.8em;
 }
 
