--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -16,7 +16,7 @@
 body {
     color: #fbf1c7;
     background-color: #fbf1c7;
-    font-family: germania;
+    font-family: "Palatino";
 }
 
 .header {
@@ -24,10 +24,11 @@ body {
     padding-top: 3%;
     padding-bottom: 1%;
     text-align: center;
+    font-family: "germania";
 }
 
 .header h1 {
-    font-family: beach-resort;
+    font-family: "beach-resort";
     color: #2aa198;
 }
 
@@ -101,7 +102,7 @@ body {
     color: #282828;
     text-align: center;
     padding-top: 3%;
-    padding-bottom: 3%;
+    padding-bottom: 0;
 }
 
 .extra-titulo {
@@ -127,7 +128,7 @@ body {
 
 
 .informacoes {
-    padding-top: 5%;
+    padding-top: 0;
     padding-bottom: 5%;
     background-color: #fdf6e3;
     color: #282828;
@@ -135,9 +136,10 @@ body {
 }
 
 .regra {
-    padding-top: 10%;
+    padding-top: 0;
     padding-bottom: 5%;
     font-size: 1.6em;
+    color: #bf565a;
 }
 
 .regra ul {
