--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -35,8 +35,9 @@ body {
 .header li {
     display: inline;
     list-style: none;
-    margin-left: 7%;
+    margin-left: 4%;
     font-size: 1.6em;
+    white-space: nowrap;
 }
 
 .header a {
